[package]
name = "grpc-ring"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6"
failure = "0.1"
grpc = "0.6.2"
log = "0.4"
protobuf = "2.8.0"

[build-dependencies]
protoc-rust-grpc = "0.6.2"

[[bin]]
name = "grpc-ring"
path = "src/server.rs"
test = false

[[bin]]
name = "grpc-ring-client"
path = "src/client.rs"
test = false